<resources>
    <string name="app_name">PthFndr</string>
    <string name="title_activity_maps">Map</string>
    <string name="lbl_average_speed">Average Speed:</string>
    <string name="lbl_distance">Distance:</string>
    <string name="lbl_time">Total Time:</string>
    <string name="lbl_date">Date:</string>
    <string name="lbl_name">Name:</string>
    <string name="lbl_max_speed">Max Speed:</string>
    <string name="lbl_join_date">Join Date:</string>
    <string name="lbl_total_trip_count">Total Trips:</string>
    <string name="lbl_total_distance">Total Distance:</string>
    <string name="lbl_total_average_distance">Average Distance:</string>
    <string name="btn_view_map">View Map</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_view_trips">View Trips</string>
    <string name="viewProfile">View Profile</string>
    <string name="noTripsToView">No trips to view</string>
    <string name="startTrip">Start New Trip</string>
    <string name="endTrip">End Trip</string>
    <string name="logo">pthfndr logo</string>
    <string name="drawer1">Profile</string>
    <string name="drawer2">Sign Out</string>
    <string name="drawer3">Fuel Info</string>
    <string name="drawer4">Trip History</string>
    <string name="drawer5">Map</string>
    <string name="lbl_fill_title">Last Fill Info</string>
    <string name="lbl_fill_date">Date:</string>
    <string name="lbl_fill_qty">Gallon Qty:</string>
    <string name="lbl_fill_cost">Total Cost:</string>
    <string name="lbl_cost_per_mile">Cost per Mile:</string>
    <string name="lbl_miles_per_gallon">Miles per Gallon:</string>
    <string name="lbl_new_cost">New Total Cost:</string>
    <string name="lbl_new_qty">New Gallon Qty:</string>
    <string name="lbl_mid_title">Current Averages</string>
    <string name="btn_update_fill_data">Update Info</string>
</resources>
