<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="2dp"
    android:id="@+id/trip_button"
    android:focusable="true"
    android:clickable="true"
    android:columnCount="2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_margin="5dp">
        <TextView
            android:text="@string/lbl_date"
            android:textAlignment="viewEnd"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
        <TextView
            android:text="@string/lbl_time"
            android:textAlignment="viewEnd"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
        <TextView
            android:text="@string/lbl_distance"
            android:textAlignment="viewEnd"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_column="1">
        <TextView
            android:id="@+id/trip_date"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
        <TextView
            android:id="@+id/trip_time"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
        <TextView
            android:id="@+id/trip_distance"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </LinearLayout>
</GridLayout>