<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme">

    <GridLayout
        android:id="@+id/infoGridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:columnCount="2"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="5dp"
            android:layout_row="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/lbl_date"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/lblTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/lbl_time"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/lblDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/lbl_distance"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/lblMaxSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/lbl_max_speed"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/lblAverageSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_average_speed"
                android:textAlignment="textEnd"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtMaxSpeed" />
        </LinearLayout>

        <Button
            android:id="@+id/btnViewTripMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:onClick="viewMapOnClick"
            android:text="@string/btn_view_map"
            app:layout_constraintTop_toBottomOf="@id/txtAverageSpeed" />

        <!-- Column 2 Stores The Values -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/txtDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/txtMaxSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/txtAverageSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp" />
        </LinearLayout>
    </GridLayout>

    <ListView
        android:id="@+id/tripListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoGridView" />
</android.support.constraint.ConstraintLayout>